@@ -4,6 +4,11 @@ repoze.who Changelog
 After 2.0a3 (unreleased)
 ------------------------
 
+- Make ``make_api_factory_with_config`` tolerant of invalid filenames /
+  content for the config file:  in such cases, the API factory will have
+  *no* configured plugins or policies:  it will only be useful for retrieving
+  the API from an environment populated by middleware.
+
 - Fix bug in ``repoze.who.api`` where the ``remember()`` or ``forget()``
   methods could return a None if the identifier plugin returned a None.
 
